@@ -2,7 +2,7 @@ Version 4.1
 
 Versioning: Latest file will be in blue. Deleted files will be in red.
 Versioning: Version enabled buckets will be displayed in green.
-New Command Line Options: PUT, DELETE, and LS.
+New Command Line Options: PUT, GET, DELETE, and LS.
 
 Features:
 
@@ -22,9 +22,10 @@ Features:
 14. Command Line options.
 
 
-Command Line Options: PUT, DELETE, and LS. 
+Command Line Options: PUT, GET, DELETE, and LS. 
 
 java -jar CloudExplorer.jar put filename bucket
+java -jar CloudExplorer.jar get filename bucket
 java -jar CloudExplorer.jar delete filename bucket
 java -jar CloudExplorer.jar ls bucket
 
